fixtures/invalid/bad-definition-term.lmk
@definition term="Term<T>"
Definition terms must stay plain text.
